--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                CS498 Data visualization: work description
+                CS498 Data visualization: work description part
             </a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
@@ -61,7 +61,7 @@
     <p align="justify">In this narrative visualization, the main theme is to examine the relationship between changes in a country's population 
     size and the difference in per capita income between the poorest and richest segments of the population. 
     The message I want to convey is that, as we can see in the case of the study of changes in the population of each 
-    country and changes in income differentials, these changes are loosely related. <br>
+    country and changes in income differentials, these changes are loosely related. <br><br>
     Visualization provides an opportunity to examine the changes in both relative and absolute values of these indicators. 
     Viewers can see and assess trends in these indicators. The main page (Scene 1) summarizes the current state of the 
     country's population, the difference between GDP per capita between the richest and poorest people, and the change in 
