--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h4 class="mt-4">Work credentials</h4>
 
     <p> 
-        <strong>Sudent: Denis Afanasev (denisa2@illinoise.edu) </strong> <br>
+        <strong>Student: Denis Afanasev (denisa2@illinoise.edu) </strong> <br>
     </p>
     <p>
         <strong>Datasource:</strong> <a href="https://www.worldbank.org/en/research/brief/World-Panel-Income-Distribution" > https://www.worldbank.org/en/research/brief/World-Panel-Income-Distribution </a> <br>
@@ -78,7 +78,7 @@
     <div class="p-3">
         <h5 class="mt-4"> Scene 1: </h5>
         <p>
-            This slide shows a summary of all countries on the scoreplot graph.<br>
+            This slide shows a summary of all countries on the scatter plot graph.<br>
 
             <ul>
                 <li><strong>Axis X</strong> - relative change in population over 10 years (from 1988 to 2008)</li>
@@ -156,12 +156,13 @@
     indicates that the state is the third scene. The "scene" parameter is displayed on scene 1, 2 and 3, the "country" 
     parameter is displayed on scene 2 and 3.
     The second parametr is country. User can navigate by each country for detalization in Scenes 2 and 3 via navigation buttons.<br>
-    All parameteres showed in the title of the scene.</p>
+    All parameters showed in the title of the scene.</p>
 
     <h4 class="mt-4">Triggers</h4>
 
-    <p align="justify">The slide number, the Ovweview button, the Absolute Values  button and the Relative Values, Previous contry and Next country button 
-    are triggers that link user actions to changes in the narrative visualization state. 
+    <p align="justify">The slide number, the Overview  button, the Absolute Values  button and the Relative Values, Previous 
+    country  and Next country button 
+    are triggering that link user actions to changes in the narrative visualization state. 
     Buttons are displayed at the bottom of the page in the form of colored rectangles with white text, 
     informing viewers about the possibility of moving back and forth between the scenes, if any.</p>
 
